--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <nav>
       <a href="#about">About</a>
-      <a href="#qualifications">Qualifications Summary</a>
+      <a href="#qualifications">Qualifications</a>
       <a href="#experience">Experience</a>
       <a href="#education">Education</a>
       <a href="#skillshonors">Skills & Honors</a>
@@ -58,7 +58,7 @@
     <!-- qualifications section -->
 
     <div id="qualifications">
-      <h2>Qualification Summary</h2>
+      <h2>Qualifications</h2>
       <ul>
         <li>Motivated self-starter seeking fast paced challenging career with opportunity for growth</li>
         <li>Business owner and co-founder with 5 years of entrepreneurial experience</li>
